# SSHXtend

./: CLAUDE.md  README.md  convert_themes.py  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
.github/workflows/: build-go-client.yml  build-rust-client.yml  docker.yml
crates/sshx/: Cargo.toml
crates/sshx-core/proto/: sshx.proto
crates/sshx-server/: Cargo.toml
crates/sshx-server/src/: grpc.rs  lib.rs  main.rs  session.rs  state.rs  web.rs
crates/sshx-server/src/web/: protocol.rs  socket.rs
crates/sshx-server/tests/: snapshot.rs  with_client.rs
crates/sshx-term/: Cargo.toml  README.md
crates/sshx-term/src/: client.rs  main.rs  selector.rs  session.rs  terminal.rs
crates/sshx/src/: connection.rs  controller.rs  lib.rs  main.rs  service.rs  transport.rs
crates/sshx/tests/: integration_test.rs
src/: app.css  app.html
src/lib/: Session.svelte  api.ts  arrange.ts  contextManager.ts  gemini.ts  idleDetection.ts  markdownToAnsi.ts  openrouter.ts  profileManager.ts  settings.ts  srocket.ts  toast.ts  wallpaper.ts
src/lib/export/: ANSIExporter.ts  ExportManager.ts  HTMLExporter.ts  MarkdownExporter.ts  SessionExportManager.ts  index.ts  types.ts
src/lib/ui/: Chat.svelte  ExportDropdown.svelte  ExportModal.svelte  NetworkInfo.svelte  OverlayMenu.svelte  SessionExportDropdown.svelte  Settings.svelte  TerminalCard.svelte  TerminalSelector.svelte  TerminalsBar.svelte  TitlebarSeparator.svelte  Toast.svelte  Toolbar.svelte  WallpaperSettings.svelte  XTerm.svelte  themes.ts
src/lib/ui/dashboard/: AuthPrompt.svelte  DashboardHeader.svelte  (+3 more)
src/routes/: +layout.svelte  +page.svelte
sshx-go/: go.mod  go.sum  main.go
sshx-go/pkg/client/: controller.go  controller_v2.go  runner.go
sshx-go/pkg/encrypt/: encrypt.go
sshx-go/pkg/proto/: sshx.pb.go  sshx_grpc.pb.go
sshx-go/pkg/service/: systemd.go
sshx-go/pkg/terminal/: pty.go
sshx-go/pkg/transport/: connection.go  grpc_transport.go  transport.go  websocket_transport.go
sshx-go/pkg/util/: logger.go
sshx-go/proto/: sshx.proto
sshx-go/scripts/: generate.sh
static/: get
(+3 files in other folders)
