[package]
name = "sshx-term"
version = "0.1.0"
edition = "2021"
authors = ["SSHXtend"]
description = "Terminal client for sshx sessions"

[[bin]]
name = "sshx-term"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
crossterm = "0.27"
ratatui = "0.26"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bytes = "1"
url = "2"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }

[dependencies.sshx]
path = "../sshx"

[dependencies.sshx-core]
path = "../sshx-core"