[package]
name = "sshx"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes = "0.8.3"
ansi_term = "0.12.1"
anyhow.workspace = true
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
async-trait = "0.1.77"
bytes = { version = "1.7.1", features = ["serde"] }
cfg-if = "1.0.0"
clap.workspace = true
ctr = "0.9.2"
encoding_rs = "0.8.31"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
pin-project = "1.1.3"
prost = "0.13.4"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sshx-core.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.4"
whoami = { version = "1.5.1", default-features = false }

[target.'cfg(unix)'.dependencies]
close_fds = "0.3.2"
nix = { version = "0.27.1", features = ["ioctl", "process", "signal", "term"] }

[target.'cfg(windows)'.dependencies]
conpty = "0.7.0"
